--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
-html,
-body {
-  padding: 0;
+
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  position: relative;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background: rgb(24, 24, 24);
 }
 
 a {
@@ -11,6 +17,12 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+nav {
+  position: fixed;
+  z-index: 999;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  padding: 1rem 2rem 1rem 2rem;
+  justify-content: space-between;
 }
