--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --nav-bg-color: rgb(35, 35, 35);
+}
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +13,12 @@
   color: #fff;
 }
 body {
-  background: rgb(24, 24, 24);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+}
+section {
+  background: rgb(51 51 51);
+  height: 100vh;
+  /* width: 100vw; */
 }
 
 a {
@@ -31,5 +38,8 @@ nav {
 @layer utilities {
   .flex-2 {
     flex: 2 !important;
-  }  
+  }
+  .project-card-bg-color {
+    background-color: var(--nav-bg-color);
+  }
 }
