--- a/styles/home.scss
+++ b/styles/home.scss
@@ -94,7 +94,7 @@
   overflow-y: hidden;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   grid-row: 1;
   grid-column: 2;
   position: relative;
@@ -127,7 +127,6 @@
 }
 
 .loading-wrapper {
-  color: #3a3535;
   @keyframes spinner {
     to {transform: rotate(360deg);}
   }
@@ -267,3 +266,11 @@ iframe {
 #projects {
   height: unset;
 }
+
+.placeholder {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+ }
