--- a/styles/home.scss
+++ b/styles/home.scss
@@ -274,3 +274,8 @@ iframe {
   position: absolute;
   background-color: white;
  }
+
+.icon-hover:hover {
+  transform: scale(1.05);
+    transition: all 0.2s ease 0s;
+}
