--- a/styles/home.scss
+++ b/styles/home.scss
@@ -110,7 +110,7 @@
   opacity: 0;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 760px) {
   .home-content-image {
     grid-column: none;
     position: absolute;
@@ -174,6 +174,7 @@
   bottom: 25px;
   left: 0;
   right: 0;
+  z-index: 4;
 }
 
 .arrow-1{
@@ -309,4 +310,8 @@ iframe {
 @-ms-keyframes fadeIn {
   0% {opacity:0;}
   100% {opacity:1;}
+}
+
+#projects {
+  background-color: rgb(61 61 61) !important;
 }
