--- a/styles/home.scss
+++ b/styles/home.scss
@@ -124,32 +124,6 @@
   }
 }
 
-.loading-wrapper {
-  width: 100%;
-    display: flex;
-  @keyframes spinner {
-    to {transform: rotate(360deg);}
-  }
-   
-  &.spinner::before {
-    --spinner-height: 3rem;
-    --spinner-width: 3rem;
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    z-index: 999;
-    top: calc(50vh - calc(var(--spinner-width)/2));;
-    left: calc(50vw - calc(var(--spinner-width)/2));
-    width: 3rem;
-    height: 3rem;
-    margin-top: -10px;
-    margin-left: -10px;
-    border-radius: 50%;
-    border: 2px solid #ccc;
-    border-top-color: #000;
-    animation: spinner .6s linear infinite;
-  }
-}
 
 .icons {
   display: flex;
@@ -228,26 +202,25 @@
 
 @keyframes loopIn {
   0% {
-    height: 100%;
-    max-height: 100%;
+    opacity: 1;
   }
 
   
   100% {
-    max-height: 0%;
-    height: 100%;
-    display: none;
+    opacity: 0;
   }
 }
 
 
 .image-1 {
   width: 100%;
-  bottom: 0;
+  transform: translateZ(-20px);
+  height: 100%;
+  opacity: 0;
   z-index: 1;
   background: rgb(61 61 61);
   position: absolute;
-  animation: loopIn 1s 1 ease-out;
+  animation: loopIn 1.5s 1 ease-out;
 }
 
 .zoomIn {
