Update resume url and fix UX

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,9 @@ nav {
   .project-card-bg-color {
     background-color: var(--nav-bg-color);
   }
+  .bg-image-inherit {
+    background-image: inherit;
+  }
 }
 
 .gradient-b {
